Fix small gap in image grid.

--- a/src/app/shared/components/image-grid-item/image-grid-item.component.scss
+++ b/src/app/shared/components/image-grid-item/image-grid-item.component.scss
@@ -1,45 +1,29 @@
 :host {
+  display: block;
   content-visibility: auto;
 
-  .image-container {
+  .image-wrapper {
+    height: 100%;
     position: relative;
     display: inline-block;
     cursor: pointer;
-  }
 
-  .buttons {
-    display: none;
-    position: absolute;
-    top: 10px;
-    right: 0;
-    z-index: 10;
-    gap: 10px;
+    .favorite-icon {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(0);
+      opacity: 0;
+      color: white;
+      pointer-events: none;
+      text-shadow: 0 0 15px #0002, /* Bright red glow */ 0 0 30px #0003,
+        /* Larger soft glow */ 0 0 45px #0005;
+      /* Subtle outer glow */
+      border-radius: 1rem;
 
-    button {
-      font-size: 12px;
-      padding: 6px 12px;
-    }
-  }
-
-  &:hover .buttons {
-    display: flex;
-  }
-
-  .favorite-icon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    opacity: 0;
-    color: white;
-    pointer-events: none;
-    text-shadow: 0 0 15px #0002, /* Bright red glow */ 0 0 30px #0003,
-      /* Larger soft glow */ 0 0 45px #0005;
-    /* Subtle outer glow */
-    border-radius: 1rem;
-
-    &.animate {
-      animation: pop-and-fade 1s ease forwards;
+      &.animate {
+        animation: pop-and-fade 1s ease forwards;
+      }
     }
   }
 }
